--- a/SDLDataProtectionSuite/SDLDataProtectionSuite/PluginResources.resx
+++ b/SDLDataProtectionSuite/SDLDataProtectionSuite/PluginResources.resx
@@ -182,7 +182,7 @@
   <data name="Lock" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EgAACxIB0t1+/AAACBBJREFUeF7tnd+LJNUVx9eXxEQjIkHXHzEoChJiFI0YUJKAmJj3XU3czc4w091V
+        DwAACw8BkvkDpQAACBBJREFUeF7tnd+LJNUVx9eXxEQjIkHXHzEoChJiFI0YUJKAmJj3XU3czc4w091V
         997qrqqJRhL9E/JDTQjBp+D6i/gUVMzPlySCCSiYVyFkEX+AKKKoyegm3jP7rY7sfut2T03P1r295wMf
         GGbq3D7nVHdV3eqaqj2KoiiKoiiKoiiKoiiKoiiKoijLgLX2TGvrW3Jb3mNM+aB11d+MLY+4cf2mG29s
         HrN+U3639Te/jHHl3XlefvPgwYNnYBglJYbD4fm2qL/nV+gzfsV+4Ffy/zq6aVz1F1tU9fr6+nkYXomU
@@ -254,6 +254,28 @@ were ignored by the parser because they were not in the correct format (.sdlxlif
     <value>{0} results</value>
   </data>
   <data name="GroupShareCredentialManager_TryGetCredentialsWithoutUserInput_Credentials_invalid_" xml:space="preserve">
-	  <value>Credentials invalid!</value>
+    <value>Credentials invalid!</value>
+  </data>
+  <data name="TellmeForum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeForum.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMeSettings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeSourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMeSourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeDoc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellMeDoc.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellMeView" xml:space="preserve">
+    <value>Trados Data Projection Suite can either be applied against project files or Translation Memory data.
+
+To apply Trados Data Projection settings against project files, please follow these steps:
+    1. Select Project
+    2. Access Batch Task
+    3. Run Protect Data followed by Unprotect Data if needed  
+
+To apply Trados Data Projection settings against a Translation Memory, please go to to the TradosTMAnonymizer view located at the bottom left of Trados Studio</value>
   </data>
 </root>
