--- a/InterpretBank/InterpretBank/PluginResources.resx
+++ b/InterpretBank/InterpretBank/PluginResources.resx
@@ -178,4 +178,13 @@
   <data name="Message_PleaseCreateTags" xml:space="preserve">
     <value>There are no tags on this db. To be able to use tags, please go to the database configurator and create some.</value>
   </data>
+  <data name="Browse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Browse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImportEntriesIntoSelectedGlossary" xml:space="preserve">
+    <value>Import entries into selected glossary</value>
+  </data>
+  <data name="ImportEntries" xml:space="preserve">
+    <value>Import entries</value>
+  </data>
 </root>
