--- a/InterpretBank/InterpretBank/PluginResources.resx
+++ b/InterpretBank/InterpretBank/PluginResources.resx
@@ -187,4 +187,10 @@
   <data name="ImportEntries" xml:space="preserve">
     <value>Import entries</value>
   </data>
+  <data name="Add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tooltip_AddNewGlossary" xml:space="preserve">
+    <value>Add new glossary</value>
+  </data>
 </root>
