--- a/XLIFF.Manager/XLIFF.Manager/PluginResources.resx
+++ b/XLIFF.Manager/XLIFF.Manager/PluginResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Plugin_Name" xml:space="preserve">
-    <value>XLIFF Manager Plugin</value>
+    <value>XLIFF Manager</value>
   </data>
   <data name="XLIFFManager_Description" xml:space="preserve">
     <value>XLIFF Manager</value>
@@ -522,5 +522,11 @@
   </data>
   <data name="TellMe_Provider_Results" xml:space="preserve">
     <value>{0} results</value>
+  </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
