--- a/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
+++ b/Multilingual.XML.FileType/Multilingual.XML.FileType/PluginResources.resx
@@ -397,4 +397,27 @@
   <data name="Question" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\question.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
+    <value>To configure this file type you need have it installed and listed. Follow these steps:
+
+1. File - Options
+2. File Types - click on:  "Additional installed File Types exist"
+3. Select File Type
+4. OK to confirm
+
+Once listed select the file type from the list to configure as needed.
+Note: File types need to be configured prior to project creation</value>
+  </data>
+  <data name="SettingsAction_Title" xml:space="preserve">
+    <value>Configure FileType in Options</value>
+  </data>
 </root>
