--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/PluginResources.resx
@@ -421,9 +421,6 @@
   <data name="ForumIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\forumicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Question" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\question.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="TellMe_Download_Plugin_From_AppStore" xml:space="preserve">
     <value>Download {0} from the AppStore</value>
   </data>
@@ -435,5 +432,34 @@
   </data>
   <data name="ValidationMessage_Found_Invalid_Lines" xml:space="preserve">
     <value>Found invalid characters: {0}</value>
+  </data>
+  <data name="Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
+    <value>To configure this file type you need have it installed and listed. Follow these steps:
+
+1. File - Options
+2. File Types - click on:  "Additional installed File Types exist"
+3. Select File Type
+4. OK to confirm</value>
+  </data>
+  <data name="SettingsAction_Title" xml:space="preserve">
+    <value>Configure FileType in Options</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+    <value>For more information,</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
+    <value>click here</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
+    <value>for documentation.</value>
   </data>
 </root>
