--- a/DSI Viewer/Sdl.Community.SdiViewer/PluginResources.resx
+++ b/DSI Viewer/Sdl.Community.SdiViewer/PluginResources.resx
@@ -178,7 +178,6 @@
   <data name="Label_SDLMTCloudInfo" xml:space="preserve">
     <value> - Translation Origin Info:</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ForumIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\forumicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -194,8 +193,28 @@
   <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  
   <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Warning2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Warning2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+    <value>For more information,</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
+    <value>click here</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
+    <value>for documentation.</value>
+  </data>
+  <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
+    <value>To engage with the app, follow these steps:
+
+1. In Edition view, go to View tab
+2. Under the Information group, find DSI Viewer</value>
+  </data>
+  <data name="SettingsAction_Title" xml:space="preserve">
+    <value>Access DSI Viewer</value>
   </data>
 </root>
