--- a/TermExcelerator/Sdl.Community.TermExcelerator/PluginResources.resx
+++ b/TermExcelerator/Sdl.Community.TermExcelerator/PluginResources.resx
@@ -139,6 +139,26 @@
   <data name="Settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Settings.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SettingsAction_ExternalHelp_1" xml:space="preserve">
+    <value>For more information,</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_2" xml:space="preserve">
+    <value>click here</value>
+  </data>
+  <data name="SettingsAction_ExternalHelp_3" xml:space="preserve">
+    <value>for documentation.</value>
+  </data>
+  <data name="SettingsAction_OpenOptionsText" xml:space="preserve">
+    <value>We couldn't find an instance of Term Excelerator Provider for the current project selected. To add it to your project, follow these steps:
+
+1. Open Project Settings
+2. Go to Termbases
+3. Select Use
+4. Via the dropdown menu locate Term Excelerator Provider</value>
+  </data>
+  <data name="SettingsAction_Title" xml:space="preserve">
+    <value>Configuring Terminology Provider in Project Settings</value>
+  </data>
   <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
