Qualitivity: updates for Omega, start updates for Tell Me

--- a/Qualitivity/Sdl.Community.Qualitivity/PluginResources.resx
+++ b/Qualitivity/Sdl.Community.Qualitivity/PluginResources.resx
@@ -820,4 +820,13 @@ still associated with the client profile '{0}'</value>
   <data name="TellMe_Provider_Results" xml:space="preserve">
     <value>{0} results</value>
   </data>
+  <data name="SourceCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SourceCode.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TellmeDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TellmeDocumentation.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingsQ" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\SettingsQ.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
